--- a/BicycleParkingStationPTH-AP/ADOPTERS.yaml
+++ b/BicycleParkingStationPTH-AP/ADOPTERS.yaml
@@ -1,4 +1,4 @@
-description: This is a compilation list of the current adopters of the data model BicycleParkingStationPTH-AP of the Subject dataModel.OSLO.PassengerTransportHubs.
+description: This is a compilation list of the current adopters of the data model BicycleParkingStation of the Subject dataModel.OSLO
 currentAdopters:
 -
  adopter: Blue Bike LDES 
@@ -6,7 +6,7 @@ currentAdopters:
  mail: pieter.colpaert@ugent.be 
  organization: IDLab (university Ghent - imec)
  project: 
- comments: Mappings will be updated according to this datamodel soon. Current version: https://www.pieter.pm/Blue-Bike-to-Linked-GBFS/root.ttl 
+ comments: Mappings will be updated according to this datamodel soon. Current version:https://www.pieter.pm/Blue-Bike-to-Linked-GBFS/root.ttl
  startDate:
 - 
  adopter: velopark.be
@@ -14,5 +14,5 @@ currentAdopters:
  mail: 
  organization: Nazka
  project:
- comments: Catalogue: https://data.velopark.be/data/catalog
+ comments: Catalogue:https://data.velopark.be/data/catalog
  startDate:
