--- a/CONTRIBUTORS.yaml
+++ b/CONTRIBUTORS.yaml
@@ -6,4 +6,5 @@ contributors:
  mail: brecht.vandevyvere@ugent.be
  organization: IDLab (university Ghent - imec). https://knows.idlab.ugent.be/
  project: Greenmov. https://green-mov.eu/
- comments: 
+ comments:
+ year: 2022
