--- a/ResourceReportForecast/ADOPTERS.yaml
+++ b/ResourceReportForecast/ADOPTERS.yaml
@@ -1,4 +1,4 @@
-description: This is a compilation list of the current adopters of the data model ResourceReport of the Subject dataModel.OSLO
+description: This is a compilation list of the current adopters of the data model ResourceReportForecast of the Subject dataModel.OSLO
 currentAdopters:
 -
  adopter: Blue Bike LDES
