--- a/ResourceReport/model.yaml
+++ b/ResourceReport/model.yaml
@@ -25,6 +25,12 @@ ResourceReport:
         type: Property
     ResourceReport.location:
       description: 'Location of the Resource. This could be a bike parking station or the real-time location of the vehicle, e.g. in free-floating part transport.'
+      properties:
+        object:
+          format: uri
+          type: string
+        type:
+          type: string
       type: object
       x-ngsi:
         model: "https://purl.eu/ns/mobility/passenger-transport-hubs#location"
@@ -73,12 +79,19 @@ ResourceReport:
         type: Property
     ResourceReport.reportTime:
       description: 'Point in time for which the report is valid.'
-      type: date-time
+      format: date-time
+      type: string
       x-ngsi:
         model: http://purl.org/dc/elements/1.1/date
         type: Property
     ResourceReport.service:
       description: 'The MobilityService used within the ResourceReport.'
+      properties:
+        object:
+          format: uri
+          type: string
+        type:
+          type: string
       type: object
       x-ngsi:
         model: "https://purl.eu/ns/mobility/passenger-transport-hubs#service"
@@ -402,4 +415,4 @@ ResourceReport:
   x-license-url: https://github.com/smart-data-models/dataModel.OSLO/blob/master/ResourceReport/LICENSE.md
   x-model-schema: https://github.com/smart-data-models/dataModel.OSLO/raw/master/ResourceReport/schema.json
   x-model-tags: GreenMov
-  x-version: 0.0.2
+  x-version: 0.0.3
