--- a/notes.yaml
+++ b/notes.yaml
@@ -1,3 +1,3 @@
-notesPrevious:
+notesPrevious: Original source for the full ontology en English https://purl.eu/doc/applicationprofile/mobility/passenger-transport-hubs
 
 notesEnd:
