--- a/notes.yaml
+++ b/notes.yaml
@@ -1,3 +1,3 @@
-notesPrevious:
+notesPrevious: There are some attribute which has inherited characters (^, .) not available in NGSI-LD therefore some kind of renaming should be done to make some of the possible queries viable. They have been kept for compatiblity reasons
 
 notesEnd:
